# meanie3D

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.vtk  HOWTO.md  Makefile.docker  README.md  RELEASE_NOTES.md  cluster_visualization.template  doxy.in  doxyfile  index.html  params.json  run_clustering_complete-2D.py  run_clustering_complete-2D.sh  run_tracking-2D.py  run_tracking-2D.sh  run_tracking-3D.py  run_tracking-3D.sh  run_tracking.sh  run_tracking.template  visualize_tracked_clusters.sh  visualize_tracked_clusters.template
Meanie3D/: config.h
cmake_modules/: FindBlitz.cmake  FindCFA.cmake  FindFLANN.cmake  FindGtest.cmake  FindHDF5.cmake  FindKDTREE.cmake  FindNETCDF.cmake  FindNanoFLANN.cmake  FindOpenMP_RT.cmake  FindRADOLAN.cmake  FindSHP.cmake  FindTBB.cmake  Findlibradolan.cmake  Findosmpbf.cmake
conf/: radolan_20dbZ-no-vectors.json
include/meanie3D/: adaptors.h  array.h  clustering.h  defines.h  detection.h  exceptions.h  featurespace.h  filters.h  implementations.h  index.h  meanie3D.h  namespaces.h  numericalrecipes.h  operations.h  parallel.h  tracking.h  types.h  utils.h  version.h  version.h.in  weights.h
m3D-test-featurespace/: FSIterationTest2D_0.nc
python/: CMakeLists.txt  MANIFEST.in  README.txt  README.txt.in  clustering.py  setup.py  setup.py.in
python-deprecated/stats/: trackstats_compare.sh
python/configurations/: meanie3D-2D.json  meanie3D-3D.json  oase-3d-xband_oase_zh.json
python/configurations/postprocessing/: meanie3D-postprocessing.json
python/configurations/tracking/: meanie3D-tracking.json  oase-cband_radolan_rx.json  oase-ci-score.json  oase3D-bonnjue-20dbZ.json  radolan.json
python/configurations/views/: bonnjuelich.json  germany.json  radolan.json
python/meanie2tic/: meanie2tic.py  startingshot_v01.docx
python/meanie3D/: CMakeLists.txt  __init__.py  __init__.py.in  meanie3D_run.py  setup.py.in
python/meanie3D/app/: __init__.py  analysis.py  external.py  postprocessing.py  tracking.py  utils.py
python/meanie3D/app/html/: d3j-force.html  track-dictionary.json  treeview.html
python/meanie3D/resources/: clusters_visit.py  d3j-play.html  index.html  meanie3d.js  track-dictionary.json  tracks_visit.py
python/meanie3D/visualisation/: __init__.py  clusters.py  tracks.py  utils.py
python/runs/configs/: radolan.json
python/runs/old/: run_oase_tracking-3D.py  run_oase_tracking-ci-2D.py  run_oase_tracking-ci-2D.sh  run_radar_tracking-3D.py  run_rico_tracking_2D.py  run_tracking-2D.sh  run_tracking-3D.py
python/src/meanie3D/: MANIFEST  __init__.py  meanie3D-postprocessing.py  meanie3D-tracking.py  run.py  setup.py
python/src/meanie3D/app/: __init__.py  external.py  postprocessing.py  tracking.py  utils.py
python/src/meanie3D/app/templates/: __init__.py  tracks_visit.py  visualise_tracks.py
python/src/meanie3D/visit/: clusters.py  pseudocolor.py  tracks.py  utils.py  visit2D.py  visit3D.py
python/src/meanie3D/visualisation/: clusters.py  tracks.py  utils.py  visit2D.py  visit3D.py
python/src/meanie3D/visualisation/templates/: tracks_visit.py
python/stats/: trackstats_radolan.sh
python/tb4/: run_tb4_clustering.sh  visualize_tb4_2D.py
python/visit/clusters/: visualize_clusters_3D.sh
python/visit/html/: show_all.html
python/visit/loops/: create_all_oase_loops_2D.sh  create_composite_loop_2D.py  create_composite_loop_2D.sh  create_radolan_loop.sh
python/visit/tracks/: visualize_conrad_tracks.py  visualize_radolan_tracks.py  visualize_tracks.py.py
scripts/: kill_visit.sh
scripts/meanie3D/: meanie3D-postprocessing.py  meanie3D-tracking.py
scripts/python-modules/: meanie3D.py  meanie3DUtils.py  meanie3D_visit.py  meanie3D_visit_utils.py  visit2D.py  visit3D.py  visitUtils.py
scripts/runs/: run_tracking.py
scripts/stats/: plot_scale_comparison.sh  plot_stats_comparison.sh  radolan_stats.sh  trackstats_compare.sh  trackstats_conrad.sh  trackstats_radolan.sh
scripts/tb4/: run_tb4_clustering.sh  visualize_tb4_2D.py  visualize_tb4_2D.sh
scripts/tools/: meanie3D-postprocessing.py  meanie3D-tracking.py
src/: meanie3D-cfm2vtk.cpp  meanie3D-ci-detect.cpp  meanie3D-copydims.cpp  meanie3D-detect.cpp  meanie3D-mapdata.cpp  meanie3D-minmax.cpp  meanie3D-parallax_correction.cpp  meanie3D-timestamp.cpp  meanie3D-track.cpp  meanie3D-trackplot.cpp  meanie3D-trackstats-conrad.cpp  meanie3D-trackstats.cpp
src/adaptors/: Radolan.cpp
src/exceptions/: CFFileConversionException.cpp
src/executables/: meanie3D-cfm2vtk.cpp  meanie3D-copydims.cpp  meanie3D-detect.cpp  meanie3D-mapdata.cpp  meanie3D-minmax.cpp  meanie3D-parallax_correction.cpp  meanie3D-radolan2cfm.cpp  meanie3D-satconv.cpp  meanie3D-timestamp.cpp  meanie3D-track.cpp  meanie3D-trackstats-conrad.cpp  meanie3D-trackstats.cpp
src/kdtree/: kdtree.c
src/numericalrecipes/: betacf.c  betai.c  crank.c  erfcc.c  gammln.c  kendl1.c  nrutil.c  sort2.c  spear.c
src/test/: gaussian_cloud.cpp
src/utils/: rand_utils.cpp
test/: gaussian_cloud.cpp  meanshift_test.cpp  settings.cpp  settings.h  testcase_base.h  testcase_base_impl.h
test/collections/: test.cpp  test_linear_mapping.h  tests_arrayindex.h  tests_map.h  tests_multiarray.h  tests_set.h  tests_vector.h
test/detection/: clustering.h  clustering_impl.h  detection_test.h  settings.cpp  settings.h  test.cpp  testcase_base.h  testcase_base_impl.h  (+3 more)
visit/: cluster_visualization-oase.template  cluster_visualization.template  create_radolan_loop.py  create_radolan_loop.sh  finish.sh  finish2.sh  finish_radolan_clustering.py  oase-cluster-template.py  run_oase_tracking-2D.py  run_oase_tracking-2D.sh  run_tb4_clustering.py  run_tracking-2D.py  run_tracking-2D.sh  run_tracking-3D.py  run_tracking-3D.sh  visit_script.py  visitlog.py  visualize_cluster_weights_2D.py  visualize_cluster_weights_2D.sh  visualize_clusters_2D.py  visualize_clusters_3D.py  visualize_clusters_3D.sh  visualize_oase_clusters.py  visualize_oase_clusters.sh  visualize_oase_clusters_2D.py  visualize_oase_clusters_2D.sh  visualize_oase_weights.py  visualize_oase_weights.sh  visualize_tracks.sh
(+281 files in other folders)
